Fix center alignent of receipt input

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -245,6 +245,7 @@ a:hover,
 
 #WhistleblowerLoginForm input {
   width: 14rem;
+  text-align: center;
 }
 
 #HeaderBox #WhistleblowerLoginBox {
